add social buttons.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <script type="text/javascript" src="js/contact.js"></script>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script src='https://www.google.com/recaptcha/api.js?hi=en'></script>
+<script async src="//static.addtoany.com/menu/page.js"></script>
 <meta name="google-site-verification" content="0vRoMSnEXZt-2sYMHUxf2DDoKA27TkuyRq1Tss4DW08" />
 </head>
 <body>
@@ -134,6 +135,11 @@
 </div>
 <!-- / フッター -->
 
+<div class="a2a_kit a2a_kit_size_32 a2a_floating_style a2a_vertical_style" style="left:0px; top:180px;">
+    <a class="a2a_button_facebook"></a>
+    <a class="a2a_button_twitter"></a>
+    <a class="a2a_button_google_plus"></a>
+</div>
 
 <form id="contact_form" action="process_form.php" method="post">
 
