--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<div class="panel">
 				<ul>
 					<li class="active"><a href=".">Top<br></a></li>
-					<li><a href="subpage.html#approach">Approach<br></a></li>
+					<li><a href="subpage.html">Approach<br></a></li>
 					<li><a href="subpage.html#company">Company<br></a></li>
 					<li><a href="#contact_form">Contact<br></a></li>
 				</ul>
