delete Absence and add google Analytics.

--- a/subpage.html
+++ b/subpage.html
@@ -18,7 +18,6 @@
 <script src="js/script.js"></script>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
 <script type="text/javascript" src="js/contact.js"></script>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script src='https://www.google.com/recaptcha/api.js?hi=en'></script>
 <script async src="//static.addtoany.com/menu/page.js"></script>
 </head>
@@ -163,17 +162,9 @@
 					<th>Email</th>
 					<td>info@cryptsonic.xyz</td>
 				</tr>
-                        </table><br><a href="https://www.000webhost.com/" onClick="this.href='https://goo.gl/9QT3vb'" 
+                        </table><br><a href="https://www.000webhost.com/" onClick="this.href='https://www.000webhost.com/890973.html'" 
                            target="_blank"><img src="https://www.000webhost.com/images/banners/other/banner1.gif" 
                                              alt="Web hosting" width="468" height="60" border="0" /></a><br>
-<!-- Cryptsonic-ad1 -->
-<p><br><ins class="adsbygoogle"
-     style="display:inline-block;width:320px;height:100px"
-     data-ad-client="ca-pub-1164154266546999"
-     data-ad-slot="8708707666"></ins></p>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 		</section>
 
 	</section>
