--- a/index.html
+++ b/index.html
@@ -18,10 +18,30 @@
 <script src="js/script.js"></script>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
 <script type="text/javascript" src="js/contact.js"></script>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script src='https://www.google.com/recaptcha/api.js?hi=en'></script>
 <script async src="//static.addtoany.com/menu/page.js"></script>
-<meta name="google-site-verification" content="0vRoMSnEXZt-2sYMHUxf2DDoKA27TkuyRq1Tss4DW08" />
+<!-- www.cryptsonic.com -->
+<!--<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-74716005-1', 'auto');
+  ga('send', 'pageview');
+
+</script>-->
+<!-- www.cryptsonic.xyz -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-74716005-2', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </head>
 <body>
 
@@ -88,22 +108,14 @@
                             embedded in all the reproduction devices which provides a perfect copyright management technology 
                             for content holders, providers, electrical manufacturers who need to prevent the illegal use of 
                             digital contents. This scheme will be a global standard to benefit all participants.</p><br>
-                        <a href="https://www.000webhost.com/" onClick="this.href='https://goo.gl/9QT3vb'" 
+                        <a href="https://www.000webhost.com/" onClick="this.href='https://www.000webhost.com/890973.html'" 
                            target="_blank"><img src="https://www.000webhost.com/images/banners/other/banner1.gif" 
                                              alt="Web hosting" width="468" height="60" border="0" /></a><br>
-<!-- Cryptsonic-ad1 -->
-<p><br><ins class="adsbygoogle"
-     style="display:inline-block;width:320px;height:100px"
-     data-ad-client="ca-pub-1164154266546999"
-     data-ad-slot="8708707666"></ins></p>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-
 		</article>
 	</section>
 
 </div>
+
 <!-- / WRAPPER -->
 <!-- フッター -->
 <div id="footer">
